# Robot_Arm

./: .gitignore  README.md  main.py  main_cv.py  pyproject.toml  util.py
Camera/: calibrate_camera.py  depth_from_shift.py
Camera/chessboard_photos/: rename.py
IK_FK/: calc_all_angles.py  enhanced_plot.py  find_target_in_txt.py  ik.py
Panel/: main.py
Scene_recognition/Elevator_OCR_RCNN_V2/: find_buttons.py
Speech_recognition/: parse_floor.py  transcribe_file_faster.py  transcribe_file_whisper.py
